Fixeded NaN issue on cart, #136.
* Currency symbol is no longer passed into the formula
* Removed unused doom ID
* Fixed issue where file name was not showing.
* Dialog now has min-height

--- a/css/sell_media.css
+++ b/css/sell_media.css
@@ -117,7 +117,7 @@
   z-index: 10000;
   position: absolute;
   width: 500px;
-  height: 250px;
+  min-height: 250px;
   background: #fff;
   box-shadow: 0 0 40px #000;
   padding: 25px;
